# daScript

./: .gitignore  AGENTS.md  CLAUDE.md  CMakeCommon.txt  CMakeLists.txt
modules/dasGLTF/: .das_module  CMakeLists.txt  README.md
modules/dasLLAMA/: .das_module  API_REWORK.md  CMakeLists.txt  README.md  audio_models_plan.md  avx_kernel_matrix.md  box_profile.epyc9654.json  epyc9654_measurements.md  gemm_generator_plan.md  get_x64_going.md  kv_cache_compression.md  model_expansion_plan.md  parakeet_plan.md  qwen2_audio_plan.md  silero_vad_plan.md  tune_for_this_box.md  turboquant_research.md  whisper_plan.md  x64_arch.md
modules/dasMetal/: .das_module  CMakeLists.txt  MASTERPLAN.md  _handrolled_mul.das
modules/dasSMT/: .das_module  CMakeLists.txt  README.md
tests/: .das_test  CMakeLists.txt  README.md
tests/aot/: CMakeLists.txt  _template_member_fixture.das  t_invoke_void.das  test_int64_ptr_index.das  test_range64_ctor_args.das  test_template_member_emit.das
tests/ast/: _lineinfo_ranges_fixture.das  test_any_long_size.das  test_lineinfo_ranges.das
tests/ast_match/: test_comprehensions.das
tests/audio/: test_wav.das
tests/bare_block/: failed_piped_named_padding.das  piped_named_call.das  test_block_in_finally.das
tests/dasGLTF/: test_gltf_parse.das  test_gltf_pbr_common.das  test_gltf_skin.das
tests/dasHV/: _dashv_test_common.das  test_server_routes.das  test_writer_connected.das
tests/dasLLAMA/: _model_tier.das  test_arch_registry.das  test_audio.das  test_batch_decode.das  test_batch_grid.das  test_box_profile.das  test_chat.das  test_deltanet.das  test_dispatch_shaping.das  test_facade.das  test_facade_docs.das  test_flash.das  test_forward.das  test_fused_decode.das  test_gguf_quant.das  test_gguf_shards.das  test_groupn.das  test_kernel_backend.das  test_kgroup_repack.das  test_kquant.das  test_kv_codec.das  test_kv_paged.das  test_kv_prefix.das  test_matmul_batch.das  test_metal_decode_parity.das  test_metal_gemm.das  test_metal_prefill_kernels.das  test_metal_prefill_parity.das  test_mtp.das  test_mxfp4.das  test_par_indexed.das  test_parity.das  test_prefill.das  test_sampling.das  test_tokenizer.das  test_tuned.das  test_vad.das  test_whisper.das
tests/dasPUGIXML/: test_fold_must_inline_heal.das
tests/dasSQLITE/: failed_create_view.das  failed_distinct_by_with_where.das  failed_each_sql_terminals.das  failed_groupby_first_mixed_with_aggregate.das  failed_join_groupby_aggregate_unknown_alias.das  failed_join_groupby_unknown_alias.das  failed_join_order_by_unknown_alias.das  failed_linq_das_sql.das  failed_linq_das_sql_join.das  failed_linq_das_sql_join_into.das  failed_linq_das_sql_selectmany.das  failed_pred_json_path_typo.das  failed_prejoin_where_named_untranslatable.das  failed_register_function.das  failed_reverse_without_distinct_by.das  failed_schema_from_type_mismatch.das  failed_sql_function_annotation.das  failed_sql_function_in_view.das  failed_sql_join_identity_select.das  failed_sql_macro.das  failed_sql_pragma_vacuum.das  failed_sql_update_delete.das  failed_sql_upsert.das  failed_sql_view_mutations.das  failed_unbindable_bind.das  failed_view_unstringifiable.das  parity_check_04_select_all.das  parity_check_05_parametrized.das  parity_check_06_error_handling.das  parity_check_07_anatomy.das  parity_check_08_where.das  parity_check_09_select.das  parity_check_10_order_by.das  parity_check_11_take_skip.das  parity_check_11b_take_then_where.das  parity_check_11c_take_then_order.das  parity_check_11d_skip_then_where.das  parity_check_12_distinct.das  parity_check_12b_set_ops.das  parity_check_13_aggregates.das  (+95 more)
tests/daslib/: ast_cursor_fixture.das
tests/data_walker/: dw_common.das  test_walk_lattice.das
tests/fio/: get_this_module_dir_resolver.das
tests/glsl/: _glsl_common.das  test_conf_byte2.das  test_conf_byte3.das  test_conf_byte4.das  test_conf_float.das  test_conf_float16.das  test_conf_float2.das  test_conf_float4.das  test_conf_half2.das  test_conf_half3.das  test_conf_half4.das  test_conf_int.das  test_conf_int16.das  test_conf_int2.das  test_conf_int8.das  test_conf_rejects.das  test_conf_short2.das  test_conf_short3.das  test_conf_short4.das  test_conf_ubyte2.das  test_conf_ubyte3.das  test_conf_ubyte4.das  test_conf_uint.das  test_conf_uint16.das  test_conf_uint4.das  test_conf_uint8.das  test_conf_ushort2.das  test_conf_ushort3.das  test_conf_ushort4.das  test_pack_half.das
tests/jit/: fast_math_specials.das
tests/jit_tests/: cant_tune_bad_grids.das  dim.das  exe_host_cpu.das  f16_cvt.das  jit_exe.das  jit_fastpath.das  llvm_code.das  llvm_compile_only.das  llvm_compile_only_client.das  llvm_tune.das  llvm_tune_manifest.das  llvm_tune_manifest_client.das  llvm_tune_modes.das  llvm_tune_modes_client.das  llvm_tune_scope.das  llvm_tune_scope_client.das  llvm_tune_scope_client_auto.das  llvm_tune_scope_client_lib.das  llvm_tune_scope_client_lib2.das  llvm_tune_scope_tuner.das  llvm_tune_scope_tuner2.das  typeinfo.das
tests/jobque/: test_jobque_dispatch_modes.das  test_jobque_stages.das  test_jobque_team.das  test_jobque_trace.das
tests/json/: test_sprint_json.das  test_sscan_json.das
tests/language/: _distinct_fixture.das  _fixup_init_macro.das  _inline_generic_helper.das  _inline_scope_helper.das  _inline_unsafe_helper.das  _lambda_vis_inner.das  _lambda_vis_mid.das  _with_module_helper.das  _with_module_helper2.das  addr_cast_sugar.das  aliasing.das  bound_check_elision.das  cant_addr_cast_non_pointer.das  cant_addr_cast_unsafe.das  capture_string.das  cast.das  cast_parens.das  cmres_heap_literal.das  const_strip_write_through_passthrough.das  cpu_supports.das  dynamic_array.das  failed_call_depth.das  failed_cast_requires_parens.das  failed_finalize_super_skips_parent.das  failed_named_call_bare.das  failed_named_call_order.das  failed_void_ptr_arith.das  infer_alias_and_alias_ctor.das  invalid_types.das  lambda_in_generic_module_vis.das  named_call.das  new_and_init.das  oop.das  operators.das  optimization_auto_inline.das  optimization_auto_inline_functions.das  optimization_cse.das  (+29 more)
(+1121 files in other folders)
